Move incubator vector module JVM argument from Dockerfile to build configuration